Fix image cropping issue

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -53,8 +53,9 @@ body {
 }
 
 img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 #carousel-nav {
